added some more console statements with loops and conditionals

--- a/assets/style.css
+++ b/assets/style.css
@@ -65,7 +65,7 @@ p {
   }
 .tenor-gif-embed {
     float: left;
-    margin-left: 75px;
-    margin-top: 10%;
+    margin-left: 3%;
+    margin-top: 20%;
 }
   
